# recipetracksystem

./: LICENSE.txt  recipetracksystem.py  setup.cfg  test_recipetracksystem.py
.github/workflows/: main.yml
data/: ingredients  test_data
