[metadata]
name = recipetracksystem
version = 0.0.1
url = https://github.com/isidentical/recipetracksystem
author = isidentical
author_email = isidentical@gmail.com
description = Recipe Track System - VCS for Food 
long_description = file: README.md
long_description_content_type = text/markdown
license-file = LICENSE.txt

[options]
py_modules = recipetracksystem
python_requires = >=3.8

[options.entry_points]
console_scripts =
    rts = recipetracksystem:main

[bdist_wheel]
universal = True
